# mandelbrot

./: CMakeLists.txt  README.md
code/: main.cpp
code/header/gui/: WindowHandler.h
code/header/mandelbrot/: MandelbrotCalculator.h  MandelbrotResult.h
code/header/utils/: ConfigUtils.h  MathUtils.h
code/src/gui/: WindowHandler.cpp
code/src/mandelbrot/: MandelbrotCalculator.cpp  MandelbrotResult.cpp
code/src/util/: ConfigUtils.cpp  MathUtils.cpp
scripts/: buildAndExecute.sh
